Fix page title overflow in My Sites > Pages

--- a/client/my-sites/pages/style.scss
+++ b/client/my-sites/pages/style.scss
@@ -131,6 +131,8 @@
 	display: inline;
 	margin-right: 33px;
 
+	word-break: break-word;
+
 	.gridicon {
 		color: var( --color-neutral-light );
 		margin: 2px 8px -2px 0;
